--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -313,6 +313,17 @@ input[type=checkbox]:checked {
   width: 100px;
 }
 
+.contact_us_page input {
+  height: 48px;
+  padding-inline: 15px;
+}
+.contact_us_page input ::-moz-placeholder {
+  font-size: 14px !important;
+}
+.contact_us_page input ::placeholder {
+  font-size: 14px !important;
+}
+
 nav, .sec__navbar {
   background-color: transparent;
   width: 100%;
