--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -313,15 +313,15 @@ input[type=checkbox]:checked {
   width: 100px;
 }
 
-.contact_us_page input {
+.contact_us_page input, .contact_us_page textarea {
   height: 48px;
-  padding-inline: 15px;
+  font-size: 13px !important;
 }
-.contact_us_page input ::-moz-placeholder {
-  font-size: 14px !important;
+.contact_us_page input::-moz-placeholder, .contact_us_page textarea::-moz-placeholder {
+  font-size: 13px !important;
 }
-.contact_us_page input ::placeholder {
-  font-size: 14px !important;
+.contact_us_page input::placeholder, .contact_us_page textarea::placeholder {
+  font-size: 13px !important;
 }
 
 nav, .sec__navbar {
