--- a/src/output.css
+++ b/src/output.css
@@ -733,6 +733,11 @@ video {
   margin: 0px;
 }
 
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -751,6 +756,26 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-\[3\] {
+  margin-top: 3;
+}
+
+.mt-\[35px\] {
+  margin-top: 35px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .box-border {
@@ -876,6 +901,10 @@ video {
   height: 300px;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
 .h-\[450px\] {
   height: 450px;
 }
@@ -886,10 +915,6 @@ video {
 
 .h-\[64px\] {
   height: 64px;
-}
-
-.h-\[400px\] {
-  height: 400px;
 }
 
 .\!w-\[100px\] {
@@ -1844,10 +1869,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1912,6 +1933,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-x {
@@ -2312,6 +2337,26 @@ video {
   padding-bottom: 9px;
 }
 
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-\[11px\] {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -2424,6 +2469,10 @@ video {
   font-size: 25px;
 }
 
+.text-\[27px\] {
+  font-size: 27px;
+}
+
 .text-\[30px\] {
   font-size: 30px;
 }
@@ -2435,18 +2484,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-\[1px\] {
-  font-size: 1px;
-}
-
-.text-\[155px\] {
-  font-size: 155px;
-}
-
-.text-\[27px\] {
-  font-size: 27px;
 }
 
 .font-bold {
@@ -2541,6 +2578,10 @@ video {
   line-height: 1.8;
 }
 
+.leading-\[1\.7\] {
+  line-height: 1.7;
+}
+
 .\!text-fourth-color {
   --tw-text-opacity: 1 !important;
   color: rgb(126 126 126 / var(--tw-text-opacity)) !important;
@@ -2587,6 +2628,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(230 234 239 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 .underline {
