--- a/assets/sass/core/_base.scss
+++ b/assets/sass/core/_base.scss
@@ -520,7 +520,7 @@ input[type="checkbox"]:checked {
         font-weight: 400;
     }
 }
-.store_item{
+.store_item,.store__banner{
     flex-wrap: nowrap;
     @media(max-width: 767px){
         flex-wrap: wrap;
