--- a/src/output.css
+++ b/src/output.css
@@ -891,6 +891,10 @@ video {
   display: none;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .h-\[100\%\] {
   height: 100%;
 }
@@ -929,6 +933,10 @@ video {
 
 .h-\[80px\] {
   height: 80px;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-full {
@@ -2337,6 +2345,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-\[10px\] {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -2631,9 +2644,19 @@ video {
   color: rgb(126 126 126 / var(--tw-text-opacity)) !important;
 }
 
+.\!text-primary-color {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 183 126 / var(--tw-text-opacity)) !important;
+}
+
 .\!text-third-color {
   --tw-text-opacity: 1 !important;
   color: rgb(37 61 78 / var(--tw-text-opacity)) !important;
+}
+
+.\!text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(230 234 239 / var(--tw-text-opacity)) !important;
 }
 
 .text-\[\#336699\]\/\[\.35\] {
@@ -2672,11 +2695,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(230 234 239 / var(--tw-text-opacity));
-}
-
-.\!text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(230 234 239 / var(--tw-text-opacity)) !important;
 }
 
 .underline {
@@ -3242,6 +3260,10 @@ video {
   .md\:hidden {
     display: none;
   }
+
+  .md\:h-\[300px\] {
+    height: 300px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -3264,6 +3286,11 @@ video {
   .lg\:px-\[100px\] {
     padding-left: 100px;
     padding-right: 100px;
+  }
+
+  .lg\:px-\[50px\] {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
