--- a/assets/sass/core/_base.scss
+++ b/assets/sass/core/_base.scss
@@ -553,6 +553,7 @@ input[type="checkbox"]:checked {
     // border: 1px solid #ececec;
     // border-radius: 15px;
     // box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.05);
+    margin-bottom: 25px;
     .accordion-body{
         padding: 8px;
     }
