--- a/src/output.css
+++ b/src/output.css
@@ -2701,6 +2701,10 @@ video {
   text-decoration-line: underline;
 }
 
+.\!underline {
+  text-decoration-line: underline !important;
+}
+
 .overline {
   text-decoration-line: overline;
 }
