--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -709,6 +709,10 @@ input[type=checkbox]:checked {
   visibility: visible !important;
 }
 
+.address_item input:checked + label {
+  border-color: #3BB77E !important;
+}
+
 nav, .sec__navbar {
   background-color: transparent;
   width: 100%;
