--- a/src/output.css
+++ b/src/output.css
@@ -784,6 +784,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-\[12px\] {
+  margin-top: 12px;
+}
+
 .mt-\[16px\] {
   margin-top: 16px;
 }
@@ -817,6 +821,10 @@ video {
 
 .inline {
   display: inline;
+}
+
+.\!flex {
+  display: flex !important;
 }
 
 .flex {
@@ -1559,6 +1567,14 @@ video {
   gap: 12px;
 }
 
+.gap-\[15px\] {
+  gap: 15px;
+}
+
+.gap-\[16px\] {
+  gap: 16px;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1875,6 +1891,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-\[12px\] {
+  border-radius: 12px;
+}
+
 .rounded-\[15px\] {
   border-radius: 15px;
 }
@@ -2045,6 +2065,11 @@ video {
   border-color: rgb(221 216 249 / var(--tw-border-opacity));
 }
 
+.border-\[\#EEEEEE\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 238 238 / var(--tw-border-opacity));
+}
+
 .border-\[\#e3e3e3\] {
   --tw-border-opacity: 1;
   border-color: rgb(227 227 227 / var(--tw-border-opacity));
@@ -2058,6 +2083,11 @@ video {
 .border-\[\#ececec\] {
   --tw-border-opacity: 1;
   border-color: rgb(236 236 236 / var(--tw-border-opacity));
+}
+
+.border-\[\#eee\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 238 238 / var(--tw-border-opacity));
 }
 
 .border-fourth-color {
@@ -2128,6 +2158,11 @@ video {
 .bg-\[\#FFF5E8\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 245 232 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ebebeb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 235 235 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#f59758\] {
@@ -2340,6 +2375,11 @@ video {
   padding-right: 35px;
 }
 
+.px-\[9px\] {
+  padding-left: 9px;
+  padding-right: 9px;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2368,6 +2408,11 @@ video {
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.py-\[24px\] {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .py-\[25px\] {
@@ -2522,6 +2567,10 @@ video {
   font-size: 22px;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
 .text-\[25px\] {
   font-size: 25px;
 }
@@ -2668,6 +2717,11 @@ video {
   color: rgb(122 122 122 / var(--tw-text-opacity));
 }
 
+.text-\[\#ebebeb\] {
+  --tw-text-opacity: 1;
+  color: rgb(235 235 235 / var(--tw-text-opacity));
+}
+
 .text-\[\#ffffffc6\] {
   color: #ffffffc6;
 }
@@ -2697,12 +2751,12 @@ video {
   color: rgb(230 234 239 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
-}
-
 .\!underline {
   text-decoration-line: underline !important;
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .overline {
@@ -3110,6 +3164,10 @@ video {
     margin-bottom: 0px;
   }
 
+  .sm\:mt-\[0px\] {
+    margin-top: 0px;
+  }
+
   .sm\:mt-\[100px\] {
     margin-top: 100px;
   }
@@ -3156,6 +3214,10 @@ video {
 
   .sm\:p-\[20px\] {
     padding: 20px;
+  }
+
+  .sm\:p-\[32px\] {
+    padding: 32px;
   }
 
   .sm\:px-\[15px\] {
@@ -3285,6 +3347,16 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:\!px-5 {
+    padding-left: 1.25rem !important;
+    padding-right: 1.25rem !important;
+  }
+
+  .lg\:\!py-5 {
+    padding-top: 1.25rem !important;
+    padding-bottom: 1.25rem !important;
   }
 
   .lg\:px-\[100px\] {
