--- a/src/output.css
+++ b/src/output.css
@@ -677,6 +677,34 @@ video {
   top: 8px;
 }
 
+.right-\[8px\] {
+  right: 8px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[-8px\] {
+  top: -8px;
+}
+
+.right-\[px\] {
+  right: px;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
+.right-\[-10px\] {
+  right: -10px;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -923,6 +951,10 @@ video {
   height: 300px;
 }
 
+.h-\[30px\] {
+  height: 30px;
+}
+
 .h-\[450px\] {
   height: 450px;
 }
@@ -939,6 +971,10 @@ video {
   height: 64px;
 }
 
+.h-\[65px\] {
+  height: 65px;
+}
+
 .h-\[80px\] {
   height: 80px;
 }
@@ -949,14 +985,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
-.h-\[65px\] {
-  height: 65px;
 }
 
 .\!w-\[100px\] {
@@ -983,12 +1011,20 @@ video {
   width: 250px;
 }
 
+.w-\[30px\] {
+  width: 30px;
+}
+
 .w-\[350px\] {
   width: 350px;
 }
 
 .w-\[64px\] {
   width: 64px;
+}
+
+.w-\[65px\] {
+  width: 65px;
 }
 
 .w-\[75px\] {
@@ -1013,18 +1049,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[70px\] {
-  width: 70px;
-}
-
-.w-\[65px\] {
-  width: 65px;
 }
 
 .max-w-\[144px\] {
@@ -1925,6 +1949,10 @@ video {
 
 .rounded-\[4px\] {
   border-radius: 4px;
+}
+
+.rounded-\[50\%\] {
+  border-radius: 50%;
 }
 
 .rounded-\[5px\] {
@@ -3196,6 +3224,10 @@ video {
     margin-top: 75px;
   }
 
+  .sm\:h-\[100px\] {
+    height: 100px;
+  }
+
   .sm\:h-\[135px\] {
     height: 135px;
   }
@@ -3212,24 +3244,12 @@ video {
     height: 550px;
   }
 
-  .sm\:h-\[80px\] {
-    height: 80px;
-  }
-
-  .sm\:h-\[100px\] {
-    height: 100px;
+  .sm\:w-\[100px\] {
+    width: 100px;
   }
 
   .sm\:w-\[135px\] {
     width: 135px;
-  }
-
-  .sm\:w-\[80px\] {
-    width: 80px;
-  }
-
-  .sm\:w-\[100px\] {
-    width: 100px;
   }
 
   .sm\:flex-col {
